// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip 8 executes the RON roms/15PUZZLE 1`] = `
"                                                                
                                                                
                                                                
   x                                                            
  xxxx                                                          
  xxxx                                                          
  xxxx                                                          
    xx                                                          
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/BLINKY 1`] = `
"                                                                
                                                                
                                                                
  xx                                                            
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
          x                                                     
         xxx                                                    
         x xx                                                   
           xxx                                                  
           xxxx                                                 
             xxx                                                
             xxx                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/BLITZ 1`] = `
"                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
            xx                                                  
            xx                                                  
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/BRIX 1`] = `
"                                                                
x x x x                                                         
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
            xxxxxx                                              
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/CONNECT4 1`] = `
"                                                                
                                                                
 x  x                                                           
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
             xxxx                                               
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/GUESS 1`] = `
"                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/HIDDEN 1`] = `
"                                                                
 x                                                              
x x x                                                           
 xx x                                                           
    x                                                           
xxx                                                             
                                                                
x x xx                                                          
  x xx                                                          
 x                                                              
  x  x                                                          
xx  x                                                           
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/IBM 1`] = `
"                                                                
x  xx xx                                                        
                                                                
xxxxx xx                                                        
                                                                
 x x x x                                                        
                                                                
x     xx                                                        
                                                                
xx    xx                                                        
                                                                
x x xxx                                                         
                                                                
   xx xx                                                        
                                                                
xx xx xx                                                        
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/INVADERS 1`] = `
"                                                                
   xxx x                                                        
xxxxxxxx                                                        
xxxx x                                                          
xx x xx                                                         
xx    xx                                                        
 xx    x                                                        
 xxxx xx                                                        
x x  xx                                                         
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/KALEID 1`] = `
"                                                                
                                                                
 x                                                              
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
          x                                                     
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/MAZE 1`] = `
"                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/MERLIN 1`] = `
"                                                                
x  xxxx                                                         
xxxxx  x                                                        
     xx                                                         
xxxxx                                                           
  x xxxx                                                        
x xx                                                            
x                                                               
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/MISSILE 1`] = `
"                                                                
   x                                                            
  xxx                                                           
 xxxxx                                                          
xxxxxxx                                                         
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/PONG 1`] = `
"                                                                
                                                                
                                                                
                                                                
                                                                
    xx x                                                        
    xxxx                                                        
    x xx                                                        
    x xx                                                        
    x                                                           
                                                                
          x                                                     
          x                                                     
          x x                                                   
          x x                                                   
          x x                                                   
          x x                                                   
            x                                                   
            x                                                   
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/PONG2 1`] = `
"                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
          x                                                     
          x                                                     
          x x                                                   
          x x                                                   
          x x                                                   
          x x                                                   
            x                                                   
            x                                                   
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/PUZZLE 1`] = `
"                                                                
                                                                
                                                                
                                                                
                                                                
      xx                                                        
    xxx                                                         
      xx                                                        
      x                                                         
                                                                
                                                                
           xxx                                                  
             x                                                  
          xx                                                    
          xx x                                                  
            xx                                                  
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/SYZYGY 1`] = `
"                                                                
                                                                
  xx   x                                                        
  xx x  x                                                       
  x  x xx                                                       
  xx  xxx                                                       
   x xx                                                         
    xx xx                                                       
    xxx                                                         
    xxx                                                         
      x                                                         
    xx xx                                                       
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/TANK 1`] = `
"                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/TETRIS 1`] = `
"                                                                
x                                                               
xx                                                              
 x                                                              
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/TICTAC 1`] = `
"                                                                
                                                                
                                                                
                                                                
     xxxxx                                                      
     xx xx                                                      
     x x x                                                      
     xx xx                                                      
     xxxxx                                                      
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/UFO 1`] = `
"                                                                
                                                                
                                                                
                                                                
                                                                
    xxxxx                                                       
                                                                
                                                                
                                                                
                                                                
          xxxxx                                                 
         xxxxxxx                                                
          xx  x                                                 
           xxxx                                                 
      x     xx                                                  
    xx                                                          
   x                                                            
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/VBRIX 1`] = `
"                                                                
xx                                                              
x x                                                             
 x x                                                            
  x                                                             
 x                                                              
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/VERS 1`] = `
"                                                                
                                                                
                                                                
 xx                                                             
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;

exports[`Chip 8 executes the RON roms/WIPEOFF 1`] = `
"                                                                
                                                                
                                                                
                                                                
   xxxx                                                         
   x  x                                                         
   x  x                                                         
   x  x                                                         
   xxxx                                                         
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                
                                                                "
`;
